--- a/src/components/app/card-list/card-list.scss
+++ b/src/components/app/card-list/card-list.scss
@@ -10,6 +10,7 @@
   display: flex;
   justify-content: space-between;
   overflow: hidden;
+  margin: 10px 0;
 
   .card-list-column {
     max-width: 50%;
