--- a/src/style/_global.scss
+++ b/src/style/_global.scss
@@ -1,6 +1,10 @@
 @import '_settings';
 @import '_reset';
 
+html, body {
+  height: 100%;
+}
+
 body{
   font-smoothing: antialiased;
   font-smoothing: grayscale;
@@ -8,8 +12,78 @@ body{
   font-size: $font-size;
   line-height: 1.4;
   color: $default-color;
-  padding-top: $header-size;
   float: left;
   width: 100%;
   background: $gray1;
+  padding: 0 $gutter 88px $gutter;
+}
+
+strong {
+  font-family: $secondary-font;
+}
+
+.logo {
+  display: flex;
+  justify-content: center;
+  padding: $gutter;
+
+  img {
+    width: 60%;
+    max-width: 203px;
+    height: 68px;
+  }
+}
+
+.form-group {
+  margin-bottom: 20px;
+  display: block;
+
+  > span {
+    font-family: $secondary-font;
+    margin-bottom: 8px;
+    display: inline-block;
+  }
+}
+
+.form-control {
+  appearance: textfield;
+  padding: 10px;
+  height: 48px;
+  border-radius: 2px;
+  background: #fff;
+  border: none;
+  width: 100%;
+  border-radius: 4px;
+  border: 1px solid $gray2;
+  transition: box-shadow .2s linear;
+  font-size: $font-size;
+  font-family: $primary-font;
+
+  &:focus {
+    box-shadow: inset 0 1px 4px rgba(#333, 0.08);
+    border-color: $gray3;
+  }
+}
+
+.form-control-range {
+  display: block;
+  width: 100%;
+}
+
+.parent-center {
+  display: flex;
+  width: 100%;
+  justify-content: center;
+}
+
+.button {
+  width: 80%;
+  height: 48px;
+  padding: 10px 40px;
+  border-radius: 40px;
+  background: $primary-color;
+  color: #fff;
+  border: none;
+  font-family: $secondary-font;
+  box-shadow: 0 11px 56px 0 rgba($primary-color, 0.3);
 }
