--- a/src/style/_settings.scss
+++ b/src/style/_settings.scss
@@ -1,12 +1,12 @@
 $primary-font: 'open_sansregular', sans-serif;
 $secondary-font: 'open_sansbold', sans-serif;
 
-$font-size: 14px;
+$font-size: 16px;
 $gutter: 20px;
 $header-size: 56px;
 
-$primary-color: #91E555;
-$default-color: #262626;
+$primary-color: #aae282;
+$default-color: #4f4f4f;
 $secondary-color: #FA3C49;
 $default-link-color: $primary-color;
 
