--- a/src/components/pages/cadastro/cadastro.scss
+++ b/src/components/pages/cadastro/cadastro.scss
@@ -13,3 +13,31 @@
     position: static;
   }
 }
+
+.form-control-money {
+  display: flex;
+  flex-direction: row-reverse;
+
+  > small {
+    appearance: textfield;
+    padding: 0 14px;
+    height: 48px;
+    border-top-left-radius: 4px;
+    border-bottom-left-radius: 4px;
+    background: #fff;
+    border: 1px solid $gray2;
+    border-right: 0;
+    transition: box-shadow .2s linear;
+    font-size: $font-size;
+    line-height: 48px;
+  }
+  input {
+    border-top-left-radius: 0;
+    border-bottom-left-radius: 0;
+
+    &:focus + small{
+      box-shadow: inset 0 1px 4px rgba(#333, 0.08);
+      border-color: $gray3;
+    }
+  }
+}
