--- a/src/style/_global.scss
+++ b/src/style/_global.scss
@@ -47,17 +47,16 @@ strong {
 
 .form-control {
   appearance: textfield;
-  padding: 10px;
+  padding: 0 10px;
   height: 48px;
-  border-radius: 2px;
   background: #fff;
-  border: none;
   width: 100%;
   border-radius: 4px;
   border: 1px solid $gray2;
   transition: box-shadow .2s linear;
   font-size: $font-size;
   font-family: $primary-font;
+  line-height: 48px;
 
   &:focus {
     box-shadow: inset 0 1px 4px rgba(#333, 0.08);
