--- a/src/components/pages/cadastro/cadastro.scss
+++ b/src/components/pages/cadastro/cadastro.scss
@@ -8,6 +8,7 @@
   bottom: 20px;
   width: 100%;
   left: 0;
+  padding: $gutter;
   text-align: center;
   @media screen and(max-height: 400px) {
     position: static;
