--- a/src/style/_global.scss
+++ b/src/style/_global.scss
@@ -58,7 +58,7 @@ strong {
   border-radius: 4px;
   border: 1px solid $gray2;
   transition: box-shadow .2s linear;
-  font-size: $font-size;
+  font-size: 16px;
   font-family: $primary-font;
   line-height: 48px;
 
@@ -89,4 +89,10 @@ strong {
   border: none;
   font-family: $secondary-font;
   box-shadow: 0 11px 56px 0 rgba($primary-color, 0.3);
+}
+
+input[type=number]::-webkit-inner-spin-button,
+input[type=number]::-webkit-outer-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
 }
