--- a/src/components/app/card-list/card-list.scss
+++ b/src/components/app/card-list/card-list.scss
@@ -1,13 +1,68 @@
 @import '../../../style/_settings';
+.card-item-wrapper {
+  position: relative;
+  margin: 10px 0;
+}
 
 .card-item {
-	background: #fff;
-	padding: 10px $gutter;
-	border-radius: 4px;
-	box-shadow: 0px 2px 18px rgba(0,0,0,0.08);
-	position: relative;
+  background: #fff;
+  padding: 0 30px 0 10px;
+  border-radius: 4px;
+  box-shadow: 0px 2px 18px rgba(0,0,0,0.08);
+  position: relative;
   display: flex;
   justify-content: space-between;
   overflow: hidden;
-  margin: 10px 0;
+}
+
+.card-item__column {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  flex-basis: 50%;
+
+  &:last-child {
+    align-items: flex-end;
+  }
+}
+
+.item-brand {
+  font-size: 18px;
+  white-space: nowrap;
+  text-overflow: ellipsis;
+  overflow: hidden;
+  width: 100%;
+}
+
+.item-info {
+  font-size: 12px;
+}
+.item-final-price {
+  padding: 16px 10px;
+  background: $gray3;
+  height: 100%;
+  margin: 8px 0;
+  border-radius: 4px;
+  max-width: 90px;
+  width: 100%;
+  white-space: nowrap;
+  text-overflow: ellipsis;
+  overflow: hidden;
+  text-align: center;
+}
+
+.card-options {
+  position: absolute;
+  border: 0;
+  height: 26px;
+  width: 10px;
+  right: 10px;
+  top: 50%;
+  margin-top: -12px;
+  font-size: 18px;
+  color: $gray5;
+  display: flex;
+  flex-direction: column;
+  line-height: 8px;
+  background: none;
 }
