--- a/src/style/_global.scss
+++ b/src/style/_global.scss
@@ -16,6 +16,7 @@ body{
   width: 100%;
   background: $gray1;
   padding: 0 $gutter 88px $gutter;
+  padding-bottom: 60px;
 }
 
 strong {
@@ -108,4 +109,16 @@ input[type=number]::-webkit-inner-spin-button,
 input[type=number]::-webkit-outer-spin-button {
   -webkit-appearance: none;
   margin: 0;
+}
+
+
+.footer {
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  height: 60px;
+  background: #fff;
+  box-shadow: -2px 0 6px 0 rgba(0,0,0,0.1);
+  padding: 10px;
 }
