--- a/src/components/app/card-list/card-list.scss
+++ b/src/components/app/card-list/card-list.scss
@@ -2,17 +2,26 @@
 .card-item-wrapper {
   position: relative;
   margin: 10px 0;
+  border-radius: 4px;
+  box-shadow: 0px 2px 18px rgba(0,0,0,0.08);
+  background: #fff;
+
+  &:first-child {
+    border: 1px solid $primary-color;
+    .item-final-price {
+      background: $primary-color;
+      color: #fff;
+    }
+  }
 }
 
 .card-item {
-  background: #fff;
   padding: 0 30px 0 10px;
-  border-radius: 4px;
-  box-shadow: 0px 2px 18px rgba(0,0,0,0.08);
   position: relative;
   display: flex;
   justify-content: space-between;
   overflow: hidden;
+
 }
 
 .card-item__column {
@@ -37,9 +46,10 @@
 .item-info {
   font-size: 12px;
 }
+
 .item-final-price {
   padding: 16px 10px;
-  background: $gray3;
+  background: $gray2;
   height: 100%;
   margin: 8px 0;
   border-radius: 4px;
