--- a/src/components/pages/cadastro/cadastro.scss
+++ b/src/components/pages/cadastro/cadastro.scss
@@ -1,5 +1,7 @@
 @import '../../../style/_settings';
-
+.cadastro {
+  padding-bottom: 80px;
+}
 .form-control-money {
   display: flex;
   flex-direction: row-reverse;
