--- a/src/style/_global.scss
+++ b/src/style/_global.scss
@@ -15,8 +15,7 @@ body{
   float: left;
   width: 100%;
   background: $gray1;
-  padding: 0 $gutter 88px $gutter;
-  padding-bottom: 60px;
+  padding: 0 $gutter;
 }
 
 strong {
@@ -117,8 +116,18 @@ input[type=number]::-webkit-outer-spin-button {
   bottom: 0;
   left: 0;
   width: 100%;
-  height: 60px;
+  height: 54px;
   background: #fff;
-  box-shadow: -2px 0 6px 0 rgba(0,0,0,0.1);
-  padding: 10px;
+  box-shadow: -1px 0 1px 0 rgba(0,0,0,0.1);
+  padding: 10px $gutter;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  z-index: 900;
+
+  svg {
+    path {
+      fill: $primary-color;
+    }
+  }
 }
