fix: Fixing layout

--- a/src/components/pages/compare/compare.scss
+++ b/src/components/pages/compare/compare.scss
@@ -2,3 +2,10 @@
 .compare {
   padding-bottom: 80px;
 }
+.price-info {
+  width: 100%;
+  text-align: center;
+  font-size: 12px;
+  display: block;
+  margin: 20px 0;
+}
