--- a/src/style/_global.scss
+++ b/src/style/_global.scss
@@ -23,16 +23,9 @@ strong {
 }
 
 .logo {
-  display: flex;
-  justify-content: center;
-  background: #fff;
-  margin-left: - $gutter;
-  margin-right: - $gutter;
-  margin-bottom: 20px;
-  box-shadow: 2px 0 6px 0 rgba(0,0,0,0.1);
-
+  width: 140px;
   img {
-    width: 60%;
+    width: 100%;
     max-width: 180px;
     height: 68px;
   }
@@ -52,7 +45,7 @@ strong {
 .form-control {
   appearance: textfield;
   padding: 0 10px;
-  height: 48px;
+  height: 44px;
   background: #fff;
   width: 100%;
   border-radius: 4px;
@@ -60,7 +53,7 @@ strong {
   transition: box-shadow .2s linear;
   font-size: 16px;
   font-family: $primary-font;
-  line-height: 48px;
+  line-height: 44px;
 
   &:focus {
     box-shadow: inset 0 1px 4px rgba(#333, 0.08);
@@ -81,7 +74,7 @@ strong {
 
 .button {
   width: 100%;
-  height: 48px;
+  height: 44px;
   padding: 10px 40px;
   border-radius: 40px;
   background: $primary-color;
@@ -111,23 +104,27 @@ input[type=number]::-webkit-outer-spin-button {
 }
 
 
-.footer {
-  position: fixed;
-  bottom: 0;
-  left: 0;
-  width: 100%;
-  height: 54px;
-  background: #fff;
-  box-shadow: -1px 0 1px 0 rgba(0,0,0,0.1);
-  padding: 10px $gutter;
+.header {
   display: flex;
-  justify-content: space-around;
+  justify-content: space-between;
   align-items: center;
-  z-index: 900;
+  background: #fff;
+  margin-left: - $gutter;
+  margin-right: - $gutter;
+  margin-bottom: 20px;
+  padding: 0 20px;
+  box-shadow: 2px 0 6px 0 rgba(0,0,0,0.1);
 
   svg {
     path {
       fill: $primary-color;
     }
   }
+}
+
+.content {
+  width: 100%;
+  max-width: 800px;
+  margin: 0 auto;
+  display: block;
 }
