--- a/src/style/_global.scss
+++ b/src/style/_global.scss
@@ -117,7 +117,7 @@ input[type=number]::-webkit-outer-spin-button {
 
   svg {
     path {
-      fill: $primary-color;
+      fill: $default-color;
     }
   }
 }
