--- a/src/style/_global.scss
+++ b/src/style/_global.scss
@@ -105,15 +105,18 @@ input[type=number]::-webkit-outer-spin-button {
 
 
 .header {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
   background: #fff;
   margin-left: - $gutter;
   margin-right: - $gutter;
   margin-bottom: 20px;
   padding: 0 20px;
   box-shadow: 2px 0 6px 0 rgba(0,0,0,0.1);
+
+  .content {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+  }
 
   svg {
     path {
